--- a/2_chessboard/my_chessboard_styles.css
+++ b/2_chessboard/my_chessboard_styles.css
@@ -20,12 +20,43 @@ Write your CSS rules below.
 */
 
 .board {
-	border:thick green solid;
+	border:thick teal solid;
 	margin-right: auto;
 	margin-left: auto;
+	margin-top:12px;
+	text-shadow: .75px .75px .75px
+
 
 }
 .square {
-	font-size: 16pt;
-	color:orange;
+	font-size: 19px;
+	color:darkorange;
+	width: 25.5px;
+	height: 25px;
+	text-align:center;
+
 }
+
+.dark{
+	font-size: 19px;
+	color:darkorange;
+	text-align: center;
+	background:teal;
+	width: 25.5px;
+	height: 25px;
+	border:trgba(55,129,155,1);
+	gradient-editor:/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#37819b+3,2a756a+73&amp;1+0,1+18,0.94+89 */
+background: -moz-linear-gradient(-45deg,  rgba(55,129,155,1) 0%, rgba(55,129,155,1) 3%, rgba(52,126,145,1) 18%, rgba(42,117,106,0.95) 73%, rgba(42,117,106,0.94) 89%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(55,129,155,1)), color-stop(3%,rgba(55,129,155,1)), color-stop(18%,rgba(52,126,145,1)), color-stop(73%,rgba(42,117,106,0.95)), color-stop(89%,rgba(42,117,106,0.94))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg,  rgba(55,129,155,1) 0%,rgba(55,129,155,1) 3%,rgba(52,126,145,1) 18%,rgba(42,117,106,0.95) 73%,rgba(42,117,106,0.94) 89%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg,  rgba(55,129,155,1) 0%,rgba(55,129,155,1) 3%,rgba(52,126,145,1) 18%,rgba(42,117,106,0.95) 73%,rgba(42,117,106,0.94) 89%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg,  rgba(55,129,155,1) 0%,rgba(55,129,155,1) 3%,rgba(52,126,145,1) 18%,rgba(42,117,106,0.95) 73%,rgba(42,117,106,0.94) 89%); /* IE10+ */
+background: linear-gradient(135deg,  rgba(55,129,155,1) 0%,rgba(55,129,155,1) 3%,rgba(52,126,145,1) 18%,rgba(42,117,106,0.95) 73%,rgba(42,117,106,0.94) 89%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#37819b', endColorstr='#f02a756a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+}
+
+
+body {
+  	background-image: url('grey.png');
+  }
