--- a/3_landing/solution/landing_styles_target.css
+++ b/3_landing/solution/landing_styles_target.css
@@ -2,7 +2,7 @@
 * {
   box-sizing: border-box;
 
-  /*border: thin red solid;*/
+  border: thin red solid;
 }
 /* You can turn it off if you want. (delete or comment it out) */
 
