--- a/3_landing/my_landing_styles.css
+++ b/3_landing/my_landing_styles.css
@@ -7,3 +7,14 @@
 /* You can turn it off if you want. (delete or comment it out) */
 
 /* Write your rules below */
+
+.button{
+	color:white;
+	display:block;
+	background-color:lightblue;
+	border-radius: 10px;
+	height:30px;
+	text-align:center;
+	text-decoration:none;
+
+}
