--- a/5_canvas_styling/my_canvas_styles.css
+++ b/5_canvas_styling/my_canvas_styles.css
@@ -1,6 +1,7 @@
 body{
 	font-size: 6pt;
 	font-family: Arial;
+
 	}
 
 .wide_input{
@@ -11,15 +12,18 @@ body{
 td {
 	vertical-align: top;
 	}
+h2{
+	margin-top:0;
+}
 
 h3{
 	text-transform:uppercase;
-	margin bottom:0;
 	font-size:6pt;
+	margin-bottom:0;
 	}
 ol{
-	margin:0;
 	padding:10px;
+	margin:0;
 	}
 ul{
 	list-style: none;
@@ -29,12 +33,13 @@ ul{
 
 .sublist{
 	font-style:italic;
+	margin:0;
 	}
 
 .canvas_section{
 	border:thin black solid;
-	padding:0px;
-	margin:10px;
+	padding:0 10px;
+	padding-top:10px;
 	} 
 
 h4{
