--- a/2_chessboard/my_chessboard_styles.css
+++ b/2_chessboard/my_chessboard_styles.css
@@ -23,28 +23,24 @@ Write your CSS rules below.
 	border:thick teal solid;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top:12px;
-	text-shadow: .75px .75px .75px
-
+	margin-top:14px;
+	text-shadow: .5px .5px .5px #444444
 
 }
 .square {
-	font-size: 19px;
+	font-size: 18.5px;
 	color:darkorange;
-	width: 25.5px;
-	height: 25px;
 	text-align:center;
-
 }
 
 .dark{
-	font-size: 19px;
+	font-size: 18.5px;
 	color:darkorange;
 	text-align: center;
 	background:teal;
-	width: 25.5px;
+	width: 25px;
 	height: 25px;
-	border:trgba(55,129,155,1);
+	margin:0;
 	gradient-editor:/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#37819b+3,2a756a+73&amp;1+0,1+18,0.94+89 */
 background: -moz-linear-gradient(-45deg,  rgba(55,129,155,1) 0%, rgba(55,129,155,1) 3%, rgba(52,126,145,1) 18%, rgba(42,117,106,0.95) 73%, rgba(42,117,106,0.94) 89%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(55,129,155,1)), color-stop(3%,rgba(55,129,155,1)), color-stop(18%,rgba(52,126,145,1)), color-stop(73%,rgba(42,117,106,0.95)), color-stop(89%,rgba(42,117,106,0.94))); /* Chrome,Safari4+ */
@@ -56,7 +52,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#37819b', end
 
 }
 
-
 body {
   	background-image: url('grey.png');
   }
+
